# Agora

./: .gitignore  00_PROJECT_BRIEF.md  01_PREREGISTRATION.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
agents/: baseline_loop.py  card_executor.py  habit_memory.py  logit_chooser.py  slow_brain.py  two_brain.py
calibration/: e3_fit_manifest.json  e3_recall_fit.py  m4_gates_fit.py  sr520_fit.py  sr520_fit_manifest.json  sr520_target.py
docs/: DECISION_M4_BORROWED_CAR_GATE.md  DECISION_M4_HAS_PASS_GATE.md  M0_BAR_PROPOSALS.md  M0_DATA_INVENTORY.md  M0_TRAFA_RVU_APPLICATION_DRAFT.md  M2_GATE_RECORD.md  M2_RING_REPIN.md  M3_GATE_RECORD.md  README.md
evaluation/: blind_shock.py  bootstrap_ci.py  build_e7_tiers.py  build_transfer_pop.py  comparator_arm.py  contamination.py  diagnostics_e7_flatness.py  diagnostics_m3.py  e1.py  e2.py  ess.py  golden_pairs.py  mnl_arm.py  permutation_placebo.py  run_bt1.py  run_bt2.py  run_e1.py  run_e2.py  run_e5.py  run_e5_price_probe.py  run_e7_ess.py  run_m3.py  run_p0_floor.py  transfer_protocol.py
grounding/: build_tract_zone_map.py  card_schema.json  card_validation.py  e7_tiers.py  render.py  seeding.py  synthetic_diary.py  taxonomy.py  tract_zone_map.json  transfer_reweight.py  zone_map.py
jobs/: README.md  bt1_firing.sbatch  bt2_firing.sbatch  e5_price_probe.sbatch  gen_persona_cards.sbatch  p0_floor.sbatch  rewrite_roundtrip.py  site_env.example.sh  sr520_fit.sbatch
runs/: bt2_predeclaration.md  m2_cards_r2b_manifest.json
serving/: README.md  __init__.py  batch_gen.py  (+2 more)
(+179 files in other folders)
